fix: adapta dark mode aos novos web components do Chrome

--- a/src/styles/_darkTheme.scss
+++ b/src/styles/_darkTheme.scss
@@ -66,6 +66,10 @@
         border-radius: 5px;
     }
 
+    .select{
+        background-color: $background-color;
+    }
+
     .button{
         background-color: $accent-color;
 
